File: components/nexus-rest/src/test/java/org/sonatype/nexus/rest/VirtualThreadRestPerformanceTest.java